<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/hebrwKeyboardView"
	android:layout_width="fill_parent"
	android:layout_alignParentBottom="true"
	android:layout_below="@+id/xsubLayout"
	android:orientation="vertical"
	android:background="#1E90FF"
	android:visibility="visible"
	android:layout_weight="6"
	android:layout_gravity="bottom"
	android:layout_height="wrap_content">


	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_marginBottom="5dp">

		<EditText
			android:id="@+id/editText_dialpad"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="3"
			android:clickable="false"
			android:cursorVisible="false"
			android:focusable="false"
			android:hint="@string/Search_in_contact"
			android:textColorHint="#F0F8FF"
			android:textColor="#ffffff"
			android:inputType="phone|number"
			android:textSize="25sp" />

		<ImageButton
			android:id="@+id/ButtonDelete1"
			android:onClick="buttoncancel"
			android:background="@drawable/bg_button"
			android:src="@drawable/button_backspace"
			android:layout_marginLeft="0dp"
			android:layout_marginRight="0dp"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:contentDescription="@string/erase"
			android:longClickable="true" />



	</LinearLayout>


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:weightSum="10"
		android:gravity="center"
		android:layout_marginBottom="10dp">


		<TextView
			    android:textColor="#FFFFFF"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/text_q"
				android:text="Q"
				android:textSize="25dp"
			    android:layout_weight="1"
			    android:background="@drawable/borders"
			    android:gravity="center"
			    android:padding="5dp"
			    android:layout_marginRight="5dp"
				/>
		<TextView
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/text_w"
			android:text="W"
			android:textSize="25dp"
			android:layout_weight="1"
			android:background="@drawable/borders"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			/>
		<TextView
			android:id="@+id/text_e"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="E"
			android:textSize="25dp"
			android:layout_weight="1"
			android:background="@drawable/borders"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			/>
		<TextView
			android:id="@+id/text_r"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="R"
			android:textSize="25dp"
			android:layout_weight="1"
			android:background="@drawable/borders"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			/>
		<TextView
			android:id="@+id/text_t"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="T"
			android:textSize="25dp"
			android:layout_weight="1"
			android:background="@drawable/borders"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			/>
		<TextView
			android:id="@+id/text_y"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Y"
			android:textSize="25dp"
			android:layout_weight="1"
			android:background="@drawable/borders"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			/>
		<TextView
			android:id="@+id/text_u"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="U"
			android:textSize="25dp"
			android:layout_weight="1"
			android:background="@drawable/borders"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"

			/>
		<TextView
			android:id="@+id/text_i"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="I"
			android:textSize="25dp"
			android:layout_weight="1"
			android:background="@drawable/borders"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			/>
		<TextView
			android:id="@+id/text_o"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="O"
			android:textSize="25dp"
			android:background="@drawable/borders"
			android:gravity="center"
			android:layout_weight="1"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			/>
		<TextView
			android:id="@+id/text_p"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="P"
			android:textSize="25dp"
			android:layout_weight="1"
			android:background="@drawable/borders"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:weightSum="10"
		android:gravity="center"
		android:layout_marginBottom="10dp"
		>

		<TextView
			android:id="@+id/text_a"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="A"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>
		<TextView
			android:id="@+id/text_s1"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="S"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>
		<TextView
			android:id="@+id/text_d1"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="D"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>
		<TextView
			android:id="@+id/text_f"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="F"
			android:textSize="25dp"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			android:layout_weight="1"
			/>
		<TextView
			android:id="@+id/text_g"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="G"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>
		<TextView
			android:id="@+id/text_h"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="H"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"

			/>
		<TextView
			android:id="@+id/text_j"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="J"
			android:textSize="25dp"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			android:layout_weight="1"
			/>
		<TextView
			android:id="@+id/text_k"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="K"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>
		<TextView
			android:id="@+id/text_l"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="L"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>

	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:weightSum="10"
		android:orientation="horizontal"
		android:layout_marginBottom="10dp">


		<ImageView
			android:textColor="#FFFFFF"
			android:layout_width="0dp"
			android:layout_height="40dp"
			android:src="@drawable/change"
			android:layout_weight="1.5"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>

		<TextView
			android:id="@+id/text_z"
			android:textColor="#FFFFFF"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="Z"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>
		<TextView
			android:id="@+id/text_x"
			android:textColor="#FFFFFF"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="X"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>
		<TextView
			android:id="@+id/text_c"
			android:textColor="#FFFFFF"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="C"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>
		<TextView
			android:id="@+id/text_v"
			android:textColor="#FFFFFF"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="V"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			android:textSize="25dp"
			android:layout_weight="1"

			/>
		<TextView
			android:id="@+id/text_b"
			android:textColor="#FFFFFF"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="B"
			android:textSize="25dp"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			android:layout_weight="1"
			/>
		<TextView
			android:id="@+id/text_n"
			android:textColor="#FFFFFF"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="N"
			android:textSize="25dp"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			android:layout_weight="1"
			/>
		<TextView
			android:id="@+id/text_m"
			android:textColor="#FFFFFF"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="M"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>
		<ImageView
			android:textColor="#FFFFFF"
			android:layout_width="0dp"
			android:layout_height="40dp"
			android:src="@drawable/back"
			android:layout_weight="1.5"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:weightSum="10"
		android:gravity="center"
		android:layout_marginBottom="10dp">

		<TextView
			android:id="@+id/text_at_rate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFF"
			android:text="\@"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>
		<TextView
			android:id="@+id/text_space"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="  "
			android:hint="|___________|"
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>
		<TextView
			android:id="@+id/text_dot"
			android:textColor="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="."
			android:textSize="25dp"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/borders"
			/>

	</LinearLayout>



	<LinearLayout
		android:orientation="horizontal"
		android:background="#1E90FF"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:weightSum="10"
		android:layout_weight="1"
		android:layout_marginBottom="10dp">


			<ImageButton
				android:background="@drawable/bg_button"
				android:contentDescription="@string/click"
				android:id="@+id/Buttonman"
				style="@style/DialerButton"
				android:src="@drawable/button_man" />

			<ImageButton
				android:background="@drawable/bg_button"
				android:layout_weight="1"
				android:id="@+id/nextkeypad"
				android:contentDescription="@string/nextkeypad"
				android:onClick="onClick"
				style="@style/DialerButton"
				android:src="@drawable/ic_dialpad_white_24dp" />


			<ImageButton
				android:background="@drawable/bg_button"
				android:layout_weight="7"
				android:id="@+id/Buttoncall"
				android:onClick="buttoncall"
				style="@style/DialerButton"
				android:src="@drawable/button_call"/>

			<ImageButton
				android:background="@drawable/bg_button"
				android:contentDescription="@string/setting"
				android:layout_weight="2"
				android:gravity="right"
				android:id="@+id/setting_button"
				style="@style/DialerButton"
				android:src="@drawable/setting" />

		</LinearLayout>

	</LinearLayout>


